--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,14 @@
     height: 300px;
     width: 600px;
 }
+
+
+.page-center{
+    /* deixar a div do tamanho da tela */
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
